RSOP/force-app/main/default/objects/Resource_Efficiency__c/Resource_Efficiency__c.object-meta.xml
<CustomObject>
    <label>Resource Efficiency</label>
    <nameField>
        <displayFormat>RE-{0000}</displayFormat>
        <label>Resource Efficiency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Efficiency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>