RSOP/force-app/main/default/objects/Resource_Efficiency__c/fields/Efficiency_Date__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Date__c</fullName>
    <label>Efficiency Date</label>
    <type>Date</type>
</CustomField>