RSOP/force-app/main/default/objects/Resource_Efficiency__c/fields/Resource_Available__c.field-meta.xml
<CustomField>
    <fullName>Resource_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Resource Available</label>
    <type>Checkbox</type>
</CustomField>